Remove Apache Spark dependencies and related code from AnalyticsService and RiskAssessmentService for improved simplicity and maintainability.